fix(ui5-avatar): resolve initial flickering issue during fallback to an icon

--- a/packages/main/src/themes/Avatar.css
+++ b/packages/main/src/themes/Avatar.css
@@ -241,7 +241,7 @@
 	display: none;
 }
 
-.ui5-avatar-initials:not(.ui5-avatar-initials-hidden) + .ui5-avatar-icon-fallback {
+.ui5-avatar-fallback-icon-hidden {
 	display: none;
 }
 
